k8s/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuda-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cuda-test
  template:
    metadata:
      labels:
        app: cuda-test
    spec:
      containers:
      - name: cuda
        image: swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/nvidia/cuda:13.0.0-base-ubuntu24.04   # 或 11.8.0，根据你驱动
        command: ["/bin/bash", "-c", "sleep infinity"]
        securityContext:
          privileged: true
        volumeMounts:
          - mountPath: /dev/dxg
            name: dxg
          - mountPath: /usr/lib/wsl/lib
            name: wsl-lib
      volumes:
        - name: dxg
          hostPath:
            path: /dev/dxg
        - name: wsl-lib
          hostPath:
            path: /usr/lib/wsl/lib
