k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translate-frontend
  namespace: translate-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translate-frontend
  template:
    metadata:
      labels:
        app: translate-frontend
    spec:
      containers:
      - name: frontend
        image: front-end:k8s
        imagePullPolicy: Never
        ports:
        - containerPort: 3000  
---
apiVersion: v1
kind: Service
metadata:
  name: translate-frontend-svc
  namespace: translate-app
spec:
  type: ClusterIP
  selector:
    app: translate-frontend
  ports:
    - protocol: TCP
      port: 3000        
      targetPort: 3000  # 转发到容器的 3000 端口
